# FastQueryDR

./: .gitignore  README.md  pyproject.toml
configs/: student_query2_msmarco.yaml  student_query4_msmarco.yaml  student_query4_pool_mean_distill_msmarco.yaml  student_query4_pool_mean_msmarco.yaml  student_query4_pool_mean_proj256_msmarco.yaml  teacher_bge_zero_shot_reference.yaml  teacher_msmarco_finetune_conservative.yaml  teacher_msmarco_mini.yaml  teacher_msmarco_phase2.yaml  teacher_msmarco_phase3.yaml
documentation/: teacher_reference.md  zero_shot_examples.json  zero_shot_examples_probe.json
documentation/online_efficient_dense_retrieval_docs/: 1_mini_proposal.md  README.md
notes/: best_student_reference.md  experiment_log.md  phase5_implementation_plan_20260416.md  phase6_distillation_plan_20260417.md  post_full_ann_to_preprint_plan.md  qualitative_comparison_20260414.md  trained_examples_20260414_140619.json  trained_examples_20260414_190617_probe.json
paper/: claim_traceability.md  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper/figures/: ann_tradeoff_plot.tex  asymmetric_architecture.tex  experiment_ladder.tex
paper/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  limitations.tex  method.tex  related_work.tex  results.tex  setup.tex
results/: ann_table.csv  latency_table.csv  main_table.csv
scripts/: export_retrieval_examples.py  generate_artifacts.py  prepare_msmarco_mini.py  run_ann_comparison.py  run_beir_eval.py  run_latency_benchmark.py  run_retrieval_eval.py  train_teacher.py
(+29 files in other folders)
